--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,4 +1,4 @@
-@use "mixins";
+@import "media";
 
 .main {
   flex: 1;
@@ -16,7 +16,7 @@
     position: relative;
     margin-bottom: 3rem;
 
-    @include mixins.viewport-md {
+    @include desktop {
       width: 360px;
       height: 360px;
     }
