--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,16 +1,30 @@
-@use "mixins";
+@import "media";
+@import "buttons";
+@import "vars";
 
 html {
-  font-size: 8px;
-  @include mixins.viewport-md {
-    font-size: 10px;
-  }
 }
+
 body {
+  font-family: var(--font-family), sans-serif;
   background: var(--main-color);
   color: var(--main-text-color);
-  font-size: 2.4rem;
-  transition: background 0.2s ease, color 0.2s ease;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.text-color {
+  color: var(--secondary-color);
+}
+
+.elem-action {
+  a {
+    display: inline-block;
+  }
+}
+
+.section {
+  padding: 60px 0;
 }
 
 .wrapper {
@@ -21,13 +35,10 @@ body {
 }
 
 .container {
-  max-width: 1180px;
+  min-width: 320px;
+  width: 100%;
   margin: 0 auto;
-  padding: 0 2rem;
-}
-
-.dark {
-  color-scheme: dark;
+  padding: 0 16px;
 }
 
 .title {
@@ -37,7 +48,7 @@ body {
     font-size: 5rem;
     text-transform: uppercase;
     font-weight: 700;
-    @include mixins.text-gradient;
+    @include text-gradient;
   }
 }
 
