--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,32 +1,39 @@
 <header class="header">
-    <div class="container">
-        <div class="header__content">
-            <nav class="nav">
-                <a class="nav__logo" href="../index.html" aria-label="Site logo">
-                    <img src="../assets/img/logo-light-sm.svg" alt="logo">
-                </a>
-                <ul class="nav__list">
-                    <li class="nav__item">
-                        <a class="nav__link {=$highlight-act}" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link {=$highlight-curr}" href="../pages/portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link {=$highlight-act}" href="../pages/service.html">Services</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link {=$highlight-act}" href="../pages/about.html">About Us</a>
-                    </li>
-                </ul>
-                <button class="nav__btn btn">Let’s Talk!</button>
-            </nav>
-            <div class="header__toggle-btn" id="menuBtn">
-                <span class="header__toggle-btn-icon"></span>
-                <span class="header__toggle-btn-icon"></span>
-                <span class="header__toggle-btn-icon"></span>
-            </div>
-        </div>
-
+  <div class="container">
+    <div class="header__content">
+      <nav class="nav">
+        <a class="nav__logo" href="./index.html" aria-label="Site logo">
+          <img src="./assets/img/logo-light-sm.svg" alt="logo" />
+        </a>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link {=$highlight-act}" href="../index.html">Home</a>
+          </li>
+          <li class="nav__item">
+            <a
+              class="nav__link {=$highlight-curr}"
+              href="../pages/portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li class="nav__item">
+            <a class="nav__link {=$highlight-act}" href="../pages/service.html"
+              >Services</a
+            >
+          </li>
+          <li class="nav__item">
+            <a class="nav__link {=$highlight-act}" href="../pages/about.html"
+              >About Us</a
+            >
+          </li>
+        </ul>
+        <button class="nav__btn btn">Let’s Talk!</button>
+      </nav>
+      <div class="header__toggle-btn" id="menuBtn">
+        <span class="header__toggle-btn-icon"></span>
+        <span class="header__toggle-btn-icon"></span>
+        <span class="header__toggle-btn-icon"></span>
+      </div>
     </div>
+  </div>
 </header>
