--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,8 +1,15 @@
+@import "../media";
+
 .hero {
-  background: url("../../../src/assets/img/hero-bg.jpg") no-repeat 50% 50% / cover;
-  min-height: 100vh;
-  padding-top: 100px;
-  padding-bottom: 20px;
+  position: relative;
+  background: url("../../assets/img/hero-bg.jpg") no-repeat 50% 50% / cover;
+  padding-top: 150px;
+  padding-bottom: 186px;
+
+  @include mobile {
+    padding-top: 200px;
+    padding-bottom: 174px;
+  }
 
   .container {
     height: 100%;
@@ -12,6 +19,43 @@
     color: var(--white);
     display: flex;
     flex-direction: column;
-    gap: 30px;
+  }
+
+  &__description {
+    display: none;
+    color: var(--medium-grey);
+    margin: 30px 0 60px;
+
+    @include mobile {
+      display: block;
+    }
+  }
+
+  &__btn {
+    width: 100%;
+    margin-top: 40px;
+
+    @include mobile {
+      margin-top: 0;
+    }
+  }
+
+  .section {
+    &__circle {
+      position: absolute;
+      left: 50%;
+      bottom: -50px;
+      transform: translateX(-50%);
+      width: 100px;
+      height: 100px;
+      z-index: 100;
+      transition: transform var(--animation);
+
+      @include mobile {
+        width: 140px;
+        height: 140px;
+        bottom: -70px;
+      }
+    }
   }
 }
