--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,4 +3,5 @@
 @import "vars";
 @import "base";
 @import "global";
-@import 'components/header';
+@import "components/header";
+@import "components/footer";
