--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,10 @@
+@import "normalize.css";
+@import "slick-carousel/slick/slick.css";
 @import "fonts";
 @import "reset";
 @import "vars";
+@import "buttons";
+@import "media";
 @import "base";
 @import "global";
 @import "components/header";
