--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -16,8 +16,8 @@
   }
 }
 
-@mixin text-gradient {
-	background: var(--hero-name-background);
-	background-clip: text;
-	color: transparent;
+@mixin media-custom($width) {
+  @media (min-width: $width) {
+    @content;
+  }
 }
