--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -11,6 +11,7 @@
   --medium-grey: #bdbdbd;
   --dark-grey: #3c3a41;
   --bg-color: #fff;
+  --dark-grey: #3c3a41;
   --main-green-50: rgba(130, 218, 113, 0.5);
 
   --black-gradient: linear-gradient(141deg, #313131 0%, #000 100%);
