--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,23 +1,75 @@
 @import "../components/hero";
+@import "../buttons";
 
 .principles {
   padding-top: 80px;
+  background-color: var(--white);
+
+  @include mobile {
+    padding-top: 120px;
+  }
+
+  &__title {
+    @include media-custom(650px) {
+      text-align: center;
+    }
+  }
 
   &__list {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 40px;
+
+    @include mobile {
+      gap: 40px;
+      margin-top: 60px;
+    }
+
+    @include media-custom(650px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+
+    @include desktop {
+      flex-wrap: nowrap;
+    }
   }
 
   &__item {
     display: flex;
     gap: 16px;
     align-items: flex-start;
+
+    @include mobile {
+      gap: 24px;
+    }
+
+    img {
+      @include mobile {
+        width: 60px;
+        height: 60px;
+      }
+    }
+
+    @include media-custom(650px) {
+      max-width: calc((100% - 40px) / 2);
+      width: 100%;
+    }
+
+    @include desktop {
+      flex-direction: column;
+      max-width: calc((100% - 141px) / 4);
+      gap: 30px;
+    }
   }
 
   &__item-title {
     margin-bottom: 4px;
+
+    @include desktop {
+      margin-bottom: 15px;
+    }
   }
 }
 
@@ -33,19 +85,19 @@
 .services {
   color: var(--white);
 
-  .section {
-    &__title {
-      margin-bottom: 16px;
-    }
-  }
-
   .accordion {
-    max-width: 510px;
+    max-width: 720px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     gap: 8px;
     margin: 40px auto;
+
+    @include desktop {
+      position: relative;
+      max-width: none;
+      margin: 90px 0;
+    }
 
     &__header {
       position: relative;
@@ -62,19 +114,93 @@
       font-weight: 500;
       border-left: 2px solid transparent;
       transition: border-left var(--animation) background var(--animation);
+
+      @include desktop {
+        max-width: 510px;
+        height: 90px;
+      }
     }
 
     &__header[aria-expanded="true"] {
       background: url("../../assets/img/accordion-bg-active.png") no-repeat 50%
         50% / cover;
       border-left: 2px solid var(--main-green);
+      backdrop-filter: blur(94px);
+      background: var(--dark-grey);
+    }
+
+    &__wrapper {
+      background-color: var(--dark-grey);
+      color: var(--dark-black);
+      overflow: hidden;
+      max-height: 0;
+      transition: max-height 0.4s ease;
+
+      @include desktop {
+        position: absolute;
+        right: 0;
+        top: 0;
+        max-width: 690px;
+        overflow-y: auto;
+      }
     }
 
     &__content {
-      padding: 30px 16px;
-      display: none;
-      background-color: var(--white);
-      color: var(--dark-black);
+      padding: 8px 16px 12px;
+    }
+
+    &__image {
+      width: 100%;
+      overflow: hidden;
+      margin-bottom: 24px;
+
+      @include tablet {
+        max-height: 325px;
+      }
+
+      @include desktop {
+        margin-left: -16px;
+        margin-right: -16px;
+        width: calc(100% + 32px);
+      }
+
+      img {
+        display: block;
+
+        @include desktop {
+          transform: scale(1.1);
+        }
+      }
+    }
+
+    &__btn {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+
+      @include tablet {
+        width: fit-content;
+      }
+
+      .btn__icon-arrow {
+        background: none;
+      }
+    }
+
+    &__footer {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 16px;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+
+      @include tablet {
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+      }
     }
 
     &__icon {
@@ -84,10 +210,18 @@
       top: 18px;
       right: 16px;
       transition: transform var(--animation);
+
+      @include desktop {
+        top: 33px;
+      }
     }
 
     &__header[aria-expanded="true"] .accordion__icon {
       transform: rotate(180deg);
+    }
+
+    &__header[aria-expanded="true"] + .accordion__content {
+      max-height: 500px;
     }
 
     &__price {
@@ -107,11 +241,24 @@
 
     &__price-value {
       font-weight: 500;
+
+      h5 {
+        color: var(--white);
+      }
     }
 
     &__content-title {
       font-weight: 500;
       margin-bottom: 12px;
+      color: var(--white);
+    }
+
+    &__header[aria-expanded="true"] + .accordion__title {
+      color: var(--main-green);
+    }
+
+    &__content-text {
+      color: var(--white);
     }
 
     .btn_secondary-black {
@@ -121,8 +268,43 @@
   }
 }
 
+.tag {
+  &__list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 6px 6px;
+    flex-wrap: wrap;
+    margin: 12px 0 16px;
+  }
+
+  &__item {
+    color: var(--main-green);
+    background-color: rgba(255, 255, 255, 0.05);
+    border-radius: 10px;
+    padding: 2px 4px;
+    width: fit-content;
+  }
+}
+
 .cases {
   color: var(--white);
+
+  padding: 60px 0;
+
+  @include tablet {
+    padding: 60px 0 90px;
+  }
+
+  @include desktop {
+    padding: 120px 0;
+  }
+
+  &__title {
+    @include desktop {
+      text-align: center;
+    }
+  }
 
   &__list {
     display: flex;
@@ -130,6 +312,11 @@
     gap: 12px;
     margin-top: 40px;
     margin-bottom: 40px;
+
+    @include desktop {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
   }
 
   &__item {
@@ -151,4 +338,32 @@
     );
     padding: 15px 9px;
   }
+}
+
+.team {
+  background: linear-gradient(141deg, #313131 0%, #000 100%);
+  color: var(--white);
+
+  @include desktop {
+    padding: 120px 0;
+  }
+
+  &__list {
+    img {
+      max-width: 469px;
+    }
+  }
+}
+
+.team__list-skills {
+  li {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 16px;
+  }
+}
+
+.waves {
+  color: var(--main-purple);
 }
