update responsive style

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -348,10 +348,8 @@
     padding: 120px 0;
   }
 
-  &__list {
-    img {
-      max-width: 469px;
-    }
+  &__item-img {
+    max-width: 469px;
   }
 }
 
