--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,6 +3,8 @@
 @import "vars";
 
 html {
+  background: linear-gradient(141deg, #313131 0%, #000 100%) no-repeat 50% 50% /
+    cover;
 }
 
 body {
@@ -11,7 +13,13 @@ body {
   color: var(--main-text-color);
   font-size: 16px;
   line-height: 1.5;
-  background: linear-gradient(141deg, #313131 0%, #000 100%);
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 .img,
