--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "normalize.css";
 @import "slick-carousel/slick/slick.css";
+@import "./../assets/fonts/icons/icons";
 @import "fonts";
 @import "reset";
 @import "vars";
