--- a/src/components/header.html
+++ b/src/components/header.html
@@ -118,28 +118,28 @@
         </a>
         <ul class="nav__list">
           <li class="nav__item">
-            <a class="p-1 nav__link {=$highlight-home}" href="../index.html"
+            <a class="p-1 nav__link {=$highlight-home}" href="./index.html"
               >Home</a
             >
           </li>
           <li class="nav__item">
             <a
               class="p-1 nav__link {=$highlight-portfolio}"
-              href="../pages/portfolio.html"
+              href="./pages/portfolio.html"
               >Portfolio</a
             >
           </li>
           <li class="nav__item">
             <a
               class="p-1 nav__link {=$highlight-services}"
-              href="../pages/service.html"
+              href="./pages/service.html"
               >Services</a
             >
           </li>
           <li class="nav__item">
             <a
               class="p-1 nav__link {=$highlight-about}"
-              href="../pages/about.html"
+              href="./pages/about.html"
               >About Us</a
             >
           </li>
