fix accordion add quota

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -125,14 +125,14 @@
           <li class="nav__item">
             <a
               class="p-1 nav__link {=$highlight-portfolio}"
-              href="./pages/portfolio.html"
+              href="../pages/portfolio.html"
               >Portfolio</a
             >
           </li>
           <li class="nav__item">
             <a
               class="p-1 nav__link {=$highlight-services}"
-              href="./pages/service.html"
+              href="../pages/service.html"
               >Services</a
             >
           </li>
