--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -43,6 +43,9 @@
   }
 
   &__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 20px;
     height: 20px;
   }
