--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -46,6 +46,9 @@
     }
 
     img {
+      width: 40px;
+      height: 40px;
+
       @include mobile {
         width: 60px;
         height: 60px;
@@ -85,11 +88,9 @@
 .services {
   color: var(--white);
 
-  .section {
-    &__title {
-      @include desktop {
-        text-align: center;
-      }
+  &__title {
+    @include desktop {
+      text-align: center;
     }
   }
 
@@ -155,6 +156,16 @@
 
     &__content {
       padding: 8px 16px 12px;
+
+      @include desktop {
+        padding: 0;
+      }
+    }
+
+    &__content-box {
+      @include desktop {
+        padding: 0 16px;
+      }
     }
 
     &__image {
@@ -166,12 +177,6 @@
         max-height: 325px;
       }
 
-      @include desktop {
-        margin-left: -16px;
-        margin-right: -16px;
-        width: calc(100% + 32px);
-      }
-
       img {
         display: block;
 
@@ -181,11 +186,19 @@
       }
     }
 
+    .elem-action {
+      width: 100%;
+
+      @include media-custom(450px) {
+        width: fit-content;
+      }
+    }
+
     &__btn {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: fit-content;
+      width: 100%;
 
       .btn__icon-arrow {
         background: none;
@@ -200,7 +213,7 @@
       align-items: center;
       width: 100%;
 
-      @include tablet {
+      @include media-custom(450px) {
         flex-wrap: nowrap;
         justify-content: space-between;
         align-items: center;
@@ -277,24 +290,24 @@
       justify-content: center;
     }
   }
-}
 
-.tag {
-  &__list {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 6px 6px;
-    flex-wrap: wrap;
-    margin: 12px 0 16px;
-  }
+  .tag {
+    &__list {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 6px 6px;
+      flex-wrap: wrap;
+      margin: 12px 0 16px;
+    }
 
-  &__item {
-    color: var(--main-green);
-    background-color: rgba(255, 255, 255, 0.05);
-    border-radius: 10px;
-    padding: 2px 4px;
-    width: fit-content;
+    &__item {
+      color: var(--main-green);
+      background-color: rgba(255, 255, 255, 0.05);
+      border-radius: 10px;
+      padding: 2px 4px;
+      width: fit-content;
+    }
   }
 }
 
@@ -351,6 +364,69 @@
   }
 }
 
+.quota {
+  padding: 120px 0;
+
+  @include mobile {
+    padding: 149px 0 145px;
+  }
+
+  @include tablet {
+    padding: 187px 0 191px;
+  }
+
+  @include desktop {
+    padding: 180px 0;
+  }
+
+  &__content {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__text {
+    position: relative;
+
+    @include desktop {
+      font-weight: 400;
+      max-width: 1080px;
+      width: 100%;
+    }
+
+    &::before {
+      position: absolute;
+      content: "";
+      background: url("./assets/img/quota.svg") no-repeat 50% 50% / contain;
+      object-fit: contain;
+      top: -66px;
+      left: -4px;
+      width: 256px;
+      height: 232px;
+
+      @include mobile {
+        width: 353px;
+        height: 320px;
+        top: -29px;
+        left: -4px;
+      }
+
+      @include tablet {
+        width: 353px;
+        height: 320px;
+        top: -67px;
+        left: -24px;
+      }
+
+      @include desktop {
+        top: -18px;
+        left: -72px;
+        width: 456px;
+        height: 413px;
+      }
+    }
+  }
+}
+
 .team {
   background: linear-gradient(141deg, #313131 0%, #000 100%);
   color: var(--white);
@@ -378,8 +454,4 @@
     align-items: center;
     gap: 16px;
   }
-}
-
-.waves {
-  color: var(--main-purple);
 }
