fixed responsive styles

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -410,7 +410,7 @@
     &::before {
       position: absolute;
       content: "";
-      background: url("./assets/img/quota.svg") no-repeat 50% 50% / contain;
+      background: url("../../assets/img/quota.svg") no-repeat 50% 50% / contain;
       object-fit: contain;
       top: -66px;
       left: -4px;
