--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -3,9 +3,6 @@
 
 .btn {
   font-family: var(--font-family), sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.14;
   text-transform: capitalize;
   color: var(--white);
   padding: 15px 32px;
@@ -28,6 +25,12 @@
   &_primary {
     border: 1px solid var(--main-purple);
     background-color: var(--main-purple);
+  }
+
+  &_primary-green {
+    border: 1px solid var(--main-green);
+    background-color: var(--main-green);
+    color: var(--dark-black);
   }
 
   &_secondary {
