--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -237,6 +237,9 @@
       display: flex;
       flex-direction: column;
       gap: 16px;
+      max-width: 450px;
+      width: 100%;
+      margin: 0 auto;
 
       .btn {
         display: flex;
