--- a/src/components/testimonials.html
+++ b/src/components/testimonials.html
@@ -145,7 +145,10 @@
           <div class="testimonials__item swiper-slide">
             <div class="testimonials__item-content">
               <div class="testimonials__item-header">
-                <img src="../assets/img/testimonials/quota.svg" alt="quota" />
+                <img
+                  src="../../assets/img/testimonials/quota.svg"
+                  alt="quota"
+                />
                 <img src="../assets/img/testimonials/logo-1.svg" alt="logo" />
               </div>
               <p class="testimonials__item-text p-1">
