--- a/src/components/testimonials.html
+++ b/src/components/testimonials.html
@@ -9,8 +9,8 @@
           <div class="testimonials__item swiper-slide">
             <div class="testimonials__item-content">
               <div class="testimonials__item-header">
-                <img src="../assets/img/testimonials/quota.svg" alt="quota" />
-                <img src="../assets/img/testimonials/logo-1.svg" alt="logo" />
+                <img src="./assets/img/testimonials/quota.svg" alt="quota" />
+                <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
               </div>
               <p class="testimonials__item-text p-1">
                 Working with this team was a game-changer for our brand. They
@@ -19,7 +19,7 @@
               </p>
             </div>
             <div class="testimonials__item-footer">
-              <img src="../assets/img/testimonials/user-1.jpg" alt="author" />
+              <img src="w./assets/img/testimonials/user-1.jpg" alt="author" />
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Morris Reichman</span>
                 <p class="testimonials__author-info p-3">
@@ -88,7 +88,30 @@
               </p>
             </div>
             <div class="testimonials__item-footer">
-              <img src="../assets/img/testimonials/user-1.jpg" alt="author" />
+              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
+              <div class="testimonials__author">
+                <span class="testimonials__author-name">Morris Reichman</span>
+                <p class="testimonials__author-info p-3">
+                  COO, First Choice Shipping
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonials__item swiper-slide">
+            <div class="testimonials__item-content">
+              <div class="testimonials__item-header">
+                <img src="./assets/img/testimonials/quota.svg" alt="quota" />
+                <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
+              </div>
+              <p class="testimonials__item-text p-1">
+                Working with this team was a game-changer for our brand. They
+                brought our vision to life with a sleek, modern website that
+                truly stands out!
+              </p>
+            </div>
+            <div class="testimonials__item-footer">
+              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Morris Reichman</span>
                 <p class="testimonials__author-info p-3">
@@ -157,7 +180,7 @@
               </p>
             </div>
             <div class="testimonials__item-footer">
-              <img src="../assets/img/testimonials/user-1.jpg" alt="author" />
+              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Morris Reichman</span>
                 <p class="testimonials__author-info p-3">
@@ -181,29 +204,6 @@
             </div>
             <div class="testimonials__item-footer">
               <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
-              <div class="testimonials__author">
-                <span class="testimonials__author-name">Morris Reichman</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="testimonials__item swiper-slide">
-            <div class="testimonials__item-content">
-              <div class="testimonials__item-header">
-                <img src="../assets/img/testimonials/quota.svg" alt="quota" />
-                <img src="../assets/img/testimonials/logo-1.svg" alt="logo" />
-              </div>
-              <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
-              </p>
-            </div>
-            <div class="testimonials__item-footer">
-              <img src="../assets/img/testimonials/user-1.jpg" alt="author" />
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Morris Reichman</span>
                 <p class="testimonials__author-info p-3">
