--- a/src/components/testimonials.html
+++ b/src/components/testimonials.html
@@ -18,10 +18,59 @@
                 truly stands out!
               </p>
             </div>
+
             <div class="testimonials__item-footer">
-              <img src="w./assets/img/testimonials/user-1.jpg" alt="author" />
+              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
               <div class="testimonials__author">
                 <span class="testimonials__author-name">Morris Reichman</span>
+                <p class="testimonials__author-info p-3">
+                  COO, First Choice Shipping
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonials__item swiper-slide">
+            <div class="testimonials__item-content">
+              <div class="testimonials__item-header">
+                <img src="./assets/img/testimonials/quota.svg" alt="quota" />
+                <img src="./assets/img/testimonials/logo-2.svg" alt="logo" />
+              </div>
+
+              <p class="testimonials__item-text p-1">
+                Their attention to detail and creativity in designing our mobile
+                app went above and beyond our expectations. Every element was
+                thoughtfully crafted, and their unique approach truly brought
+                our vision to life. We couldn’t be happier with the end...
+              </p>
+            </div>
+
+            <div class="testimonials__item-footer">
+              <img src="./assets/img/testimonials/user-2.jpg" alt="author" />
+              <div class="testimonials__author">
+                <span class="testimonials__author-name">Emily Roberts</span>
+                <p class="testimonials__author-info p-3">Founder</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonials__item swiper-slide">
+            <div class="testimonials__item-content">
+              <div class="testimonials__item-header">
+                <img src="./assets/img/testimonials/quota.svg" alt="quota" />
+                <img src="./assets/img/testimonials/logo-2.svg" alt="logo" />
+              </div>
+              <p class="testimonials__item-text p-1">
+                Working with this team was a game-changer for our brand. They
+                brought our vision to life with a sleek, modern website that
+                truly stands out!
+              </p>
+            </div>
+
+            <div class="testimonials__item-footer">
+              <img src="./assets/img/testimonials/user-3.jpg" alt="author" />
+              <div class="testimonials__author">
+                <span class="testimonials__author-name">Michael Turner</span>
                 <p class="testimonials__author-info p-3">
                   COO, First Choice Shipping
                 </p>
@@ -41,6 +90,7 @@
                 truly stands out!
               </p>
             </div>
+
             <div class="testimonials__item-footer">
               <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
               <div class="testimonials__author">
@@ -56,21 +106,22 @@
             <div class="testimonials__item-content">
               <div class="testimonials__item-header">
                 <img src="./assets/img/testimonials/quota.svg" alt="quota" />
-                <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
+                <img src="./assets/img/testimonials/logo-2.svg" alt="logo" />
               </div>
+
               <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
+                Their attention to detail and creativity in designing our mobile
+                app went above and beyond our expectations. Every element was
+                thoughtfully crafted, and their unique approach truly brought
+                our vision to life. We couldn’t be happier with the end...
               </p>
             </div>
+
             <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
+              <img src="./assets/img/testimonials/user-2.jpg" alt="author" />
               <div class="testimonials__author">
-                <span class="testimonials__author-name">Morris Reichman</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
+                <span class="testimonials__author-name">Emily Roberts</span>
+                <p class="testimonials__author-info p-3">Founder</p>
               </div>
             </div>
           </div>
@@ -79,7 +130,7 @@
             <div class="testimonials__item-content">
               <div class="testimonials__item-header">
                 <img src="./assets/img/testimonials/quota.svg" alt="quota" />
-                <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
+                <img src="./assets/img/testimonials/logo-2.svg" alt="logo" />
               </div>
               <p class="testimonials__item-text p-1">
                 Working with this team was a game-changer for our brand. They
@@ -87,125 +138,11 @@
                 truly stands out!
               </p>
             </div>
-            <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
-              <div class="testimonials__author">
-                <span class="testimonials__author-name">Morris Reichman</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
-              </div>
-            </div>
-          </div>
 
-          <div class="testimonials__item swiper-slide">
-            <div class="testimonials__item-content">
-              <div class="testimonials__item-header">
-                <img src="./assets/img/testimonials/quota.svg" alt="quota" />
-                <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
-              </div>
-              <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
-              </p>
-            </div>
             <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
+              <img src="./assets/img/testimonials/user-3.jpg" alt="author" />
               <div class="testimonials__author">
-                <span class="testimonials__author-name">Morris Reichman</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="testimonials__item swiper-slide">
-            <div class="testimonials__item-content">
-              <div class="testimonials__item-header">
-                <img src="./assets/img/testimonials/quota.svg" alt="quota" />
-                <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
-              </div>
-              <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
-              </p>
-            </div>
-            <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
-              <div class="testimonials__author">
-                <span class="testimonials__author-name">Morris Reichman</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="testimonials__item swiper-slide">
-            <div class="testimonials__item-content">
-              <div class="testimonials__item-header">
-                <img src="./assets/img/testimonials/quota.svg" alt="quota" />
-                <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
-              </div>
-              <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
-              </p>
-            </div>
-            <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
-              <div class="testimonials__author">
-                <span class="testimonials__author-name">Morris Reichman</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="testimonials__item swiper-slide">
-            <div class="testimonials__item-content">
-              <div class="testimonials__item-header">
-                <img src="./assets/img/testimonials/quota.svg" alt="quota" />
-                <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
-              </div>
-              <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
-              </p>
-            </div>
-            <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
-              <div class="testimonials__author">
-                <span class="testimonials__author-name">Morris Reichman</span>
-                <p class="testimonials__author-info p-3">
-                  COO, First Choice Shipping
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="testimonials__item swiper-slide">
-            <div class="testimonials__item-content">
-              <div class="testimonials__item-header">
-                <img src="./assets/img/testimonials/quota.svg" alt="quota" />
-                <img src="./assets/img/testimonials/logo-1.svg" alt="logo" />
-              </div>
-              <p class="testimonials__item-text p-1">
-                Working with this team was a game-changer for our brand. They
-                brought our vision to life with a sleek, modern website that
-                truly stands out!
-              </p>
-            </div>
-            <div class="testimonials__item-footer">
-              <img src="./assets/img/testimonials/user-1.jpg" alt="author" />
-              <div class="testimonials__author">
-                <span class="testimonials__author-name">Morris Reichman</span>
+                <span class="testimonials__author-name">Michael Turner</span>
                 <p class="testimonials__author-info p-3">
                   COO, First Choice Shipping
                 </p>
@@ -213,9 +150,6 @@
             </div>
           </div>
         </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
       </div>
     </div>
   </div>
